# Conquest-IO

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: sync-config.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: Buttons.tsx  GameContext.tsx  GameOverScreen.tsx  GameScreen.tsx  HomePage.tsx  PauseMenuScreen.tsx  PopulationBar.tsx  SettingsModal.tsx  StatsOverlay.tsx
src/assets/Galaxy/: Galaxy.tsx
src/assets/hyperspeed/: Hyperspeed.tsx
src/assets/scripts/: ai.worker.ts  engine.tsx  soundEngine.ts
src/components/: configs.ts
